# cofre

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
artifacts/: android_after_create.xml  android_after_create2.xml  android_after_manual_clear.xml  android_after_tap_unlock.xml  android_after_unlock_tap1450.xml  android_keyevent_a.xml  android_logcat_settings.txt  android_readonly_dialog.xml  android_readonly_dialog2.xml  android_readonly_off.xml  android_settings_after_toggles.xml  android_settings_bottom.xml  android_settings_end.xml  android_settings_final.xml  android_settings_mid.xml  settings_window_start.xml  window.xml  window_entry.xml  window_entry_filled.xml
core/: Cargo.toml
core/src/: backup.rs  crypto.rs  database.rs  lib.rs  sync.rs  validation.rs
docs/: ACCEPTANCE.md  ANDROID.md  ARCHITECTURE.md  BACKUP.md  DATA-MODEL.md  DESKTOP.md  LEGACY-CLEANUP.md  MEDIA.md  MIGRATIONS.md  PERMISSIONS.md  QA.md  QR-SYNC.md  RELEASE.md  SYNC.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  003_secure_notes.sql  004_uuid_and_sync.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  backup.rs  generate.rs  media.rs  mod.rs  network_sync.rs  notes.rs  recovery.rs  session.rs  settings.rs  sync.rs  vault.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/crypto/: cipher.rs  key_derivation.rs  recovery.rs
src-tauri/src/session/: state.rs
src-tauri/src/storage/: database.rs  models.rs
(+151 files in other folders)
