[package]
name = "lyvox-vault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
