[package]
name = "lyvox-vault"
version = "1.0.3"
description = "Lyvox Vault - Gerenciador de Senhas Offline"
authors = ["lyvox"]
edition = "2021"

[lib]
name = "lyvox_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
sha2 = "0.10"
dirs-next = "2"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
local-ip-address = "0.6.13"
hmac = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
